Card Removed and About Us and Our Services Added

--- a/about-us.html
+++ b/about-us.html
@@ -997,220 +997,14 @@
                 class="financity-footer-column financity-item-pdlr financity-column-15"
               >
                 <div id="text-2" class="widget widget_text financity-widget">
-                  <div class="textwidget">
-                    <p><img src="upload/footer-logo.png" alt="" /></p>
-                    <p>
-                      <i class="fa fa-location-arrow" id="i_f47b_5"></i> 34
-                      Hamston, Times Avnue NY <br />
-                      <span
-                        class="gdlr-core-space-shortcode"
-                        id="span_f47b_8"
-                      ></span>
-                      <i class="fa fa-phone" id="i_f47b_6"></i> +1-3454-5678-77
-                      <br />
-                      <span
-                        class="gdlr-core-space-shortcode"
-                        id="span_f47b_9"
-                      ></span>
-                      <i class="fa fa-envelope-open-o" id="i_f47b_7"></i>
-                      sales@goodlayers.com
-                    </p>
-                  </div>
-                </div>
-              </div>
-              <div
-                class="financity-footer-column financity-item-pdlr financity-column-15"
-              >
-                <div
-                  id="gdlr-core-recent-post-widget-3"
-                  class="widget widget_gdlr-core-recent-post-widget financity-widget"
-                >
-                  <h3 class="financity-widget-title">Recent News</h3>
-                  <div
-                    class="gdlr-core-recent-post-widget-wrap gdlr-core-style-2"
-                  >
-                    <div class="gdlr-core-recent-post-widget clearfix">
-                      <div class="gdlr-core-recent-post-widget-content">
-                        <div class="gdlr-core-recent-post-widget-title">
-                          <a href="#">I sink under the weight</a>
-                        </div>
-                        <div class="gdlr-core-recent-post-widget-info">
-                          <span
-                            class="gdlr-core-blog-info gdlr-core-blog-info-font gdlr-core-skin-caption gdlr-core-blog-info-date"
-                            ><span class="gdlr-core-head"
-                              ><i class="icon_clock_alt"></i></span
-                            ><a href="#">June 6, 2016</a></span
-                          >
-                        </div>
-                      </div>
-                    </div>
-                    <div class="gdlr-core-recent-post-widget clearfix">
-                      <div class="gdlr-core-recent-post-widget-content">
-                        <div class="gdlr-core-recent-post-widget-title">
-                          <a href="#">Possession of my entire soul</a>
-                        </div>
-                        <div class="gdlr-core-recent-post-widget-info">
-                          <span
-                            class="gdlr-core-blog-info gdlr-core-blog-info-font gdlr-core-skin-caption gdlr-core-blog-info-date"
-                            ><span class="gdlr-core-head"
-                              ><i class="icon_clock_alt"></i></span
-                            ><a href="#">June 6, 2016</a></span
-                          >
-                        </div>
-                      </div>
-                    </div>
-                    <div class="gdlr-core-recent-post-widget clearfix">
-                      <div class="gdlr-core-recent-post-widget-content">
-                        <div class="gdlr-core-recent-post-widget-title">
-                          <a href="#">I am so happy, my dear friend</a>
-                        </div>
-                        <div class="gdlr-core-recent-post-widget-info">
-                          <span
-                            class="gdlr-core-blog-info gdlr-core-blog-info-font gdlr-core-skin-caption gdlr-core-blog-info-date"
-                            ><span class="gdlr-core-head"
-                              ><i class="icon_clock_alt"></i></span
-                            ><a href="#">June 6, 2016</a></span
-                          >
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div
-                class="financity-footer-column financity-item-pdlr financity-column-15"
-              >
-                <div
-                  id="nav_menu-1"
-                  class="widget widget_nav_menu financity-widget"
-                >
-                  <h3 class="financity-widget-title">Useful Links</h3>
-                  <div class="menu-useful-links-container">
-                    <ul id="menu-useful-links" class="menu">
-                      <li class="menu-item">
-                        <a href="about-us.html">About Us</a>
-                      </li>
-                      <li class="menu-item">
-                        <a href="about-our-team.html">Our Team</a>
-                      </li>
-                      <li class="menu-item">
-                        <a href="services.html">Our Services</a>
-                      </li>
-                      <li class="menu-item">
-                        <a href="blog-3-columns-with-frame-post-format.html"
-                          >News</a
-                        >
-                      </li>
-                      <li class="menu-item">
-                        <a href="career.html">Career</a>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-              <div
-                class="financity-footer-column financity-item-pdlr financity-column-15"
-              >
-                <div id="text-4" class="widget widget_text financity-widget">
-                  <h3 class="financity-widget-title">Contact Form</h3>
-                  <div class="textwidget">
-                    <div role="form" class="wpcf7" lang="en-US" dir="ltr">
-                      <div class="screen-reader-response"></div>
-                      <form
-                        method="post"
-                        class="wpcf7-form"
-                        novalidate="novalidate"
-                      >
-                        <div
-                          class="gdlr-core-input-wrap gdlr-core-small gdlr-core-full-width gdlr-core-with-column gdlr-core-no-border"
-                        >
-                          <div class="gdlr-core-column-60">
-                            <span class="wpcf7-form-control-wrap your-name">
-                              <input
-                                type="text"
-                                name="your-name"
-                                value=""
-                                size="40"
-                                class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required"
-                                aria-required="true"
-                                aria-invalid="false"
-                                placeholder="Full Name*"
-                              />
-                            </span>
-                          </div>
-                          <div class="clear"></div>
-                          <div class="gdlr-core-column-60">
-                            <span class="wpcf7-form-control-wrap your-email">
-                              <input
-                                type="email"
-                                name="your-email"
-                                value=""
-                                size="40"
-                                class="wpcf7-form-control wpcf7-text wpcf7-email wpcf7-validates-as-required wpcf7-validates-as-email"
-                                aria-required="true"
-                                aria-invalid="false"
-                                placeholder="Email*"
-                              />
-                            </span>
-                          </div>
-                          <div class="clear"></div>
-                          <div class="gdlr-core-column-60">
-                            <span class="wpcf7-form-control-wrap your-message">
-                              <textarea
-                                name="your-message"
-                                cols="40"
-                                rows="10"
-                                class="wpcf7-form-control wpcf7-textarea wpcf7-validates-as-required"
-                                aria-required="true"
-                                aria-invalid="false"
-                                placeholder="Message*"
-                              ></textarea>
-                            </span>
-                          </div>
-                          <div class="gdlr-core-column-60 gdlr-core-left-align">
-                            <input
-                              type="submit"
-                              value="Submit Now"
-                              class="wpcf7-form-control wpcf7-submit gdlr-core-small"
-                            />
-                          </div>
-                        </div>
-                      </form>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="financity-copyright-wrapper">
-            <div
-              class="financity-copyright-container financity-container clearfix"
-            >
-              <div class="financity-copyright-left financity-item-pdlr">
-                Copyright 2018, All Right Reserved, max-themes
-              </div>
-              <div class="financity-copyright-right financity-item-pdlr">
-                <a href="#" target="_self"
-                  ><i class="fa fa-facebook" id="i_f47b_8"></i
-                ></a>
-                <a href="#" target="_self"
-                  ><i class="fa fa-twitter" id="i_f47b_9"></i
-                ></a>
-                <a href="#" target="_self"
-                  ><i class="fa fa-linkedin" id="i_f47b_10"></i
-                ></a>
-                <a href="#" target="_self"
-                  ><i class="fa fa-google-plus" id="i_f47b_11"></i
-                ></a>
-                <a href="#" target="_self"
-                  ><i class="fa fa-instagram" id="i_f47b_12"></i
-                ></a>
-              </div>
-            </div>
-          </div>
-        </footer>
-      </div>
-    </div>
+                   <div class="textwidget">
+                                    <p><img src="upload/footer-logo.png" alt=""></p>
+                                    <p><i class="fa fa-location-arrow" id="i_f47b_5"></i> <a href="https://www.google.com/maps/place/26%C2%B053'04.0%22N+75%C2%B044'05.0%22E/@26.8844357,75.7321434,17z" target="_blank" rel="noopener noreferrer">124, Vardhaman Nagar, Near 200 Feet Road, Ajmer Road, Jaipur, Rajasthan – 302019</a>
+                                        <br> <span class="gdlr-core-space-shortcode" id="span_f47b_8"></span> <i class="fa fa-phone" id="i_f47b_6"></i> <a href="tel:+919772959105" target="_blank" rel="noopener noreferrer">+91-9772959105</a>
+                                        <br> <span class="gdlr-core-space-shortcode" id="span_f47b_9"></span> <i class="fa fa-envelope-open-o" id="i_f47b_7"></i> <a href="https://mail.google.com/mail/?view=cm&fs=1&to=360subsidy@gmail.com" target="_blank" rel="noopener noreferrer">360subsidy@gmail.com</a>
+</p>
+                                </div>
+        
 
     <script type="text/javascript" src="js/jquery/jquery.js"></script>
     <script
