extra html file removed

--- a/about-us.html
+++ b/about-us.html
@@ -104,7 +104,7 @@
                     <li
                       class="menu-item menu-item-has-children financity-normal-menu"
                     >
-                      <a href="services.html" class="sf-with-ul-pre"
+                      <a  class="sf-with-ul-pre"
                         >Our Services</a
                       >
                       <ul class="sub-menu">
