--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                             <ul id="menu-main-navigation" class="m-menu">
                                 <li class="menu-item menu-item-home current-menu-item page_item page-item-2039 current_page_item"><a href="index.html">Home</a></li>
                                 <li class="menu-item menu-item-home current-menu-item page_item page-item-2039 current_page_item"><a href="about-us.html">About Us</a></li>
-                                <li class="menu-item menu-item-home current-menu-item page_item page-item-2039 current_page_item"><a href="services.html">Our Services</a></li>
+                                <li class="menu-item menu-item-home current-menu-item page_item page-item-2039 current_page_item"><a >Our Services</a></li>
                             </ul>
                         </div>
                     </div>
@@ -89,7 +89,7 @@
                                     <ul id="menu-main-navigation-1" class="sf-menu">
                                         <li class="menu-item menu-item-home current-menu-item page_item page-item-2039 current_page_item financity-normal-menu"><a href="index.html">Home</a></li>
                                        
-                                        <li class="menu-item menu-item-has-children financity-normal-menu"><a href="services.html" class="sf-with-ul-pre">Our Services</a>
+                                        <li class="menu-item menu-item-has-children financity-normal-menu"><a  class="sf-with-ul-pre">Our Services</a>
                                             <ul class="sub-menu">
                                                 <li class="menu-item" data-size="60"><a href="loan-finance.html">Loan & Finance</a></li>
                                                 <li class="menu-item" data-size="60"><a href="rips.html">Rajasthan Investment Promotion Scheme (RIPS)</a></li>
