--- a/rips.html
+++ b/rips.html
@@ -114,7 +114,7 @@
                   >
                     <a href="index.html">Home</a>
                     <a href="about-us.html">About Us</a>
-                    <a href="services.html">Our Services</a>
+                    <a >Our Services</a>
                   </li>
                 </ul>
               </div>
@@ -163,7 +163,7 @@
                     <li
                       class="menu-item menu-item-has-children financity-normal-menu"
                     >
-                      <a href="services.html" class="sf-with-ul-pre"
+                      <a  class="sf-with-ul-pre"
                         >Our Services</a
                       >
                       <ul class="sub-menu">
