replace the images

--- a/about-us.html
+++ b/about-us.html
@@ -165,7 +165,7 @@
                 <div
                   class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js"
                   style="
-                    background-image: url(upload/about-team-bg.jpg);
+                    background-image: url(upload/about1.jpg);
                     background-size: cover;
                     background-position: center;
                   "
@@ -646,7 +646,7 @@
                         <div
                           class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js"
                           style="
-                            background-image: url(upload/shutterstock_417862237.jpg);
+                            background-image: url(upload/aboutsection1.jpg);
                             background-size: cover;
                             background-position: center;
                           "
