--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-image-item gdlr-core-item-pdlr gdlr-core-item-pdb  gdlr-core-center-align">
                                                     <div class="gdlr-core-image-item-wrap gdlr-core-media-image  gdlr-core-image-item-style-round" style="border-width: 0px;">
-                                                        <a href="loan-finance.html"><img src="upload/shutterstock_519474688.jpg" alt="" width="1800" height="1080"><span class="gdlr-core-image-overlay "><i class="gdlr-core-image-overlay-icon fa fa-link gdlr-core-size-22"></i></span></a>
+                                                        <a href="loan-finance.html"><img src="upload/Loan.jpg" alt="" width="1800" height="1080"><span class="gdlr-core-image-overlay "><i class="gdlr-core-image-overlay-icon fa fa-link gdlr-core-size-22"></i></span></a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -315,7 +315,7 @@
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-image-item gdlr-core-item-pdlr gdlr-core-item-pdb  gdlr-core-center-align">
                                                     <div class="gdlr-core-image-item-wrap gdlr-core-media-image  gdlr-core-image-item-style-round" style="border-width: 0px;">
-                                                        <a href="rips.html"><img src="upload/hp2-service-2.jpg" alt="" width="700" height="423"><span class="gdlr-core-image-overlay "><i class="gdlr-core-image-overlay-icon fa fa-link gdlr-core-size-22"></i></span></a>
+                                                        <a href="rips.html"><img src="upload/Rips.jpg" alt="" width="700" height="423"><span class="gdlr-core-image-overlay "><i class="gdlr-core-image-overlay-icon fa fa-link gdlr-core-size-22"></i></span></a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -344,7 +344,7 @@
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-image-item gdlr-core-item-pdlr gdlr-core-item-pdb  gdlr-core-center-align">
                                                     <div class="gdlr-core-image-item-wrap gdlr-core-media-image  gdlr-core-image-item-style-round" style="border-width: 0px;">
-                                                        <a href="vishwakarma-yuva-laghu-udyog-protsahan-yojana.html"><img src="upload/hp2-service-3.jpg" alt="" width="700" height="423"><span class="gdlr-core-image-overlay "><i class="gdlr-core-image-overlay-icon fa fa-link gdlr-core-size-22"></i></span></a>
+                                                        <a href="vishwakarma-yuva-laghu-udyog-protsahan-yojana.html"><img src="upload/VYUPY.jpg" alt="" width="700" height="423"><span class="gdlr-core-image-overlay "><i class="gdlr-core-image-overlay-icon fa fa-link gdlr-core-size-22"></i></span></a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -373,7 +373,7 @@
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-image-item gdlr-core-item-pdlr gdlr-core-item-pdb  gdlr-core-center-align">
                                                     <div class="gdlr-core-image-item-wrap gdlr-core-media-image  gdlr-core-image-item-style-round" style="border-width: 0px;">
-                                                        <a href="brupy.html"><img src="upload/hp2-service-4.jpg" alt="" width="700" height="423"><span class="gdlr-core-image-overlay "><i class="gdlr-core-image-overlay-icon fa fa-link gdlr-core-size-22"></i></span></a>
+                                                        <a href="brupy.html"><img src="upload/brupy.jpg" alt="" width="700" height="423"><span class="gdlr-core-image-overlay "><i class="gdlr-core-image-overlay-icon fa fa-link gdlr-core-size-22"></i></span></a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -402,7 +402,7 @@
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-image-item gdlr-core-item-pdlr gdlr-core-item-pdb  gdlr-core-center-align">
                                                     <div class="gdlr-core-image-item-wrap gdlr-core-media-image  gdlr-core-image-item-style-round" style="border-width: 0px;">
-                                                        <a href="pmegp.html"><img src="upload/hp2-service-5.jpg" alt="" width="700" height="423"><span class="gdlr-core-image-overlay "><i class="gdlr-core-image-overlay-icon fa fa-link gdlr-core-size-22"></i></span></a>
+                                                        <a href="pmegp.html"><img src="upload/PMEGP.jpg" alt="" width="700" height="423"><span class="gdlr-core-image-overlay "><i class="gdlr-core-image-overlay-icon fa fa-link gdlr-core-size-22"></i></span></a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -431,7 +431,7 @@
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-image-item gdlr-core-item-pdlr gdlr-core-item-pdb  gdlr-core-center-align">
                                                     <div class="gdlr-core-image-item-wrap gdlr-core-media-image  gdlr-core-image-item-style-round" style="border-width: 0px;">
-                                                        <a href="wearhouse.html"><img src="upload/hp2-service-6.jpg" alt="" width="700" height="423"><span class="gdlr-core-image-overlay "><i class="gdlr-core-image-overlay-icon fa fa-link gdlr-core-size-22"></i></span></a>
+                                                        <a href="wearhouse.html"><img src="upload/Warehouse.jpg" alt="" width="700" height="423"><span class="gdlr-core-image-overlay "><i class="gdlr-core-image-overlay-icon fa fa-link gdlr-core-size-22"></i></span></a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -570,7 +570,7 @@
                                                 <li class="gdlr-core-item-mglr">
                                                     <div class="gdlr-core-portfolio-grid  gdlr-core-left-align gdlr-core-style-normal">
                                                         <div class="gdlr-core-portfolio-thumbnail gdlr-core-media-image  gdlr-core-style-margin-icon">
-                                                            <div class="gdlr-core-portfolio-thumbnail-image-wrap  gdlr-core-zoom-on-hover"><img src="upload/pexels-photo-380769-700x660.jpeg" alt="" width="700" height="660"><span class="gdlr-core-image-overlay  gdlr-core-portfolio-overlay gdlr-core-image-overlay-center-icon gdlr-core-js gdlr-core-with-margin"><span class="gdlr-core-image-overlay-content"><span class="gdlr-core-portfolio-icon-wrap"><a class="gdlr-core-ilightbox gdlr-core-js " href="upload/pexels-photo-380769.jpeg" data-ilightbox-group="gdlr-core-img-group-1"><i class="gdlr-core-portfolio-icon fa fa-search"></i></a></span></span>
+                                                            <div class="gdlr-core-portfolio-thumbnail-image-wrap  gdlr-core-zoom-on-hover"><img src="upload/Liosionwith.jpg" alt="" width="700" height="660"><span class="gdlr-core-image-overlay  gdlr-core-portfolio-overlay gdlr-core-image-overlay-center-icon gdlr-core-js gdlr-core-with-margin"><span class="gdlr-core-image-overlay-content"><span class="gdlr-core-portfolio-icon-wrap"><a class="gdlr-core-ilightbox gdlr-core-js " href="upload/Liosionwith.jpg" data-ilightbox-group="gdlr-core-img-group-1"><i class="gdlr-core-portfolio-icon fa fa-search"></i></a></span></span>
                                                                 </span>
                                                             </div>
                                                         </div>
@@ -583,7 +583,7 @@
                                                 <li class="gdlr-core-item-mglr">
                                                     <div class="gdlr-core-portfolio-grid  gdlr-core-left-align gdlr-core-style-normal">
                                                         <div class="gdlr-core-portfolio-thumbnail gdlr-core-media-image  gdlr-core-style-margin-icon">
-                                                            <div class="gdlr-core-portfolio-thumbnail-image-wrap  gdlr-core-zoom-on-hover"><img src="upload/shutterstock_431851042-700x660.jpg" alt="" width="700" height="660"><span class="gdlr-core-image-overlay  gdlr-core-portfolio-overlay gdlr-core-image-overlay-center-icon gdlr-core-js gdlr-core-with-margin"><span class="gdlr-core-image-overlay-content"><span class="gdlr-core-portfolio-icon-wrap"><a class="gdlr-core-ilightbox gdlr-core-js " href="upload/shutterstock_431851042.jpg" data-ilightbox-group="gdlr-core-img-group-1"><i class="gdlr-core-portfolio-icon fa fa-search"></i></a></span></span>
+                                                            <div class="gdlr-core-portfolio-thumbnail-image-wrap  gdlr-core-zoom-on-hover"><img src="upload/FinancialAdvisory.jpg.jpg" alt="" width="700" height="660"><span class="gdlr-core-image-overlay  gdlr-core-portfolio-overlay gdlr-core-image-overlay-center-icon gdlr-core-js gdlr-core-with-margin"><span class="gdlr-core-image-overlay-content"><span class="gdlr-core-portfolio-icon-wrap"><a class="gdlr-core-ilightbox gdlr-core-js " href="upload/FinancialAdvisory.jpg.jpg" data-ilightbox-group="gdlr-core-img-group-1"><i class="gdlr-core-portfolio-icon fa fa-search"></i></a></span></span>
                                                                 </span>
                                                             </div>
                                                         </div>
@@ -596,7 +596,7 @@
                                                 <li class="gdlr-core-item-mglr">
                                                     <div class="gdlr-core-portfolio-grid  gdlr-core-left-align gdlr-core-style-normal">
                                                         <div class="gdlr-core-portfolio-thumbnail gdlr-core-media-image  gdlr-core-style-margin-icon">
-                                                            <div class="gdlr-core-portfolio-thumbnail-image-wrap  gdlr-core-zoom-on-hover"><img src="upload/shutterstock_334043390-700x660.jpg" alt="" width="700" height="660"><span class="gdlr-core-image-overlay  gdlr-core-portfolio-overlay gdlr-core-image-overlay-center-icon gdlr-core-js gdlr-core-with-margin"><span class="gdlr-core-image-overlay-content"><span class="gdlr-core-portfolio-icon-wrap"><a class="gdlr-core-ilightbox gdlr-core-js " href="upload/shutterstock_334043390.jpg" data-ilightbox-group="gdlr-core-img-group-1"><i class="gdlr-core-portfolio-icon fa fa-search"></i></a></span></span>
+                                                            <div class="gdlr-core-portfolio-thumbnail-image-wrap  gdlr-core-zoom-on-hover"><img src="upload/stamp2.jpg" alt="" width="700" height="660"><span class="gdlr-core-image-overlay  gdlr-core-portfolio-overlay gdlr-core-image-overlay-center-icon gdlr-core-js gdlr-core-with-margin"><span class="gdlr-core-image-overlay-content"><span class="gdlr-core-portfolio-icon-wrap"><a class="gdlr-core-ilightbox gdlr-core-js " href="upload/stamp2.jpg" data-ilightbox-group="gdlr-core-img-group-1"><i class="gdlr-core-portfolio-icon fa fa-search"></i></a></span></span>
                                                                 </span>
                                                             </div>
                                                         </div>
@@ -609,7 +609,7 @@
                                                 <li class="gdlr-core-item-mglr">
                                                     <div class="gdlr-core-portfolio-grid  gdlr-core-left-align gdlr-core-style-normal">
                                                         <div class="gdlr-core-portfolio-thumbnail gdlr-core-media-image  gdlr-core-style-margin-icon">
-                                                            <div class="gdlr-core-portfolio-thumbnail-image-wrap  gdlr-core-zoom-on-hover"><img src="upload/shutterstock_251320138-700x660.jpg" alt="" width="700" height="660"><span class="gdlr-core-image-overlay  gdlr-core-portfolio-overlay gdlr-core-image-overlay-center-icon gdlr-core-js gdlr-core-with-margin"><span class="gdlr-core-image-overlay-content"><span class="gdlr-core-portfolio-icon-wrap"><a class="gdlr-core-ilightbox gdlr-core-js " href="upload/shutterstock_251320138.jpg" data-ilightbox-group="gdlr-core-img-group-1"><i class="gdlr-core-portfolio-icon fa fa-search"></i></a></span></span>
+                                                            <div class="gdlr-core-portfolio-thumbnail-image-wrap  gdlr-core-zoom-on-hover"><img src="upload/SecuredSubsidy.jpg" alt="" width="700" height="660"><span class="gdlr-core-image-overlay  gdlr-core-portfolio-overlay gdlr-core-image-overlay-center-icon gdlr-core-js gdlr-core-with-margin"><span class="gdlr-core-image-overlay-content"><span class="gdlr-core-portfolio-icon-wrap"><a class="gdlr-core-ilightbox gdlr-core-js " href="upload/SecuredSubsidy.jpg" data-ilightbox-group="gdlr-core-img-group-1"><i class="gdlr-core-portfolio-icon fa fa-search"></i></a></span></span>
                                                                 </span>
                                                             </div>
                                                         </div>
@@ -1105,6 +1105,9 @@
             htmlDiv.innerHTML = '<style>' + htmlDivCss + '</style>';
             document.getElementsByTagName('head')[0].appendChild(htmlDiv.childNodes[0]);
         }
+    //      function revslider_showDoubleJqueryError() {
+    //     console.warn("Revolution Slider: Multiple jQuery versions loaded.");
+    // }
     </script>
 
 
