--- a/about-us.html
+++ b/about-us.html
@@ -165,7 +165,7 @@
                 <div
                   class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js"
                   style="
-                    background-image: url(upload/about1.jpg);
+                    background-image: url(upload//about-team-bg.jpg);
                     background-size: cover;
                     background-position: center;
                   "
@@ -970,7 +970,7 @@
                         <div
                           class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js"
                           style="
-                            background-image: url(upload/about-half-bg.jpg);
+                            background-image: url(upload/about1.jpg);
                             background-size: cover;
                             background-position: top right;
                           "
