about image change

--- a/about-us.html
+++ b/about-us.html
@@ -165,7 +165,7 @@
                 <div
                   class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js"
                   style="
-                    background-image: url(upload//aboutusfinal.jpg);
+                    background-image: url(upload//about-team-bg.jpg);
                     background-size: cover;
                     background-position: center;
                   "
