add link in l & f

--- a/loan-finance.html
+++ b/loan-finance.html
@@ -644,23 +644,40 @@
                 class="financity-footer-column financity-item-pdlr financity-column-15"
               >
                 <div id="text-2" class="widget widget_text financity-widget">
-                  <div class="textwidget">
+                 <div class="textwidget">
                     <p><img src="upload/footer-logo.png" alt="" /></p>
                     <p>
-                      <i class="fa fa-location-arrow" id="i_f47b_5"></i> 34
-                      Hamston, Times Avnue NY <br />
+                      <i class="fa fa-location-arrow" id="i_f47b_5"></i> <a
+                        href="https://www.google.com/maps/place/26%C2%B053'04.0%22N+75%C2%B044'05.0%22E/@26.8844357,75.7321434,17z"
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        >124, Vardhaman Nagar, Near 200 Feet Road, Ajmer Road,
+                        Jaipur, Rajasthan – 302019</a
+                      >
+                      <br />
                       <span
                         class="gdlr-core-space-shortcode"
                         id="span_f47b_8"
                       ></span>
-                      <i class="fa fa-phone" id="i_f47b_6"></i> +1-3454-5678-77
+                      <i class="fa fa-phone" id="i_f47b_6"></i>
+                      <a
+                        href="tel:+919772959105"
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        >+91-9772959105</a
+                      >
                       <br />
                       <span
                         class="gdlr-core-space-shortcode"
                         id="span_f47b_9"
                       ></span>
                       <i class="fa fa-envelope-open-o" id="i_f47b_7"></i>
-                      sales@goodlayers.com
+                      <a
+                        href="https://mail.google.com/mail/?view=cm&fs=1&to=360subsidy@gmail.com"
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        >360subsidy@gmail.com</a
+                      >
                     </p>
                   </div>
                 </div>
