removed star keyword

--- a/brupy.html
+++ b/brupy.html
@@ -356,7 +356,7 @@
                                   or underdeveloped region seeking to establish
                                   or expand your business? 360 Subsidy offers
                                   expert consultancy to help you leverage the
-                                  *Backward and Regional Upliftment Programme
+                                  Backward and Regional Upliftment Programme
                                   for Youth (BRUPY) — a government initiative
                                   designed to foster inclusive economic
                                   development through entrepreneurship and
@@ -366,8 +366,8 @@
                                   <b style="font-size: 22px">About BRUPY</b>
                                 </p>
                                 <p>
-                                  The *Backward and Regional Upliftment
-                                  Programme for Youth (BRUPY)* is a
+                                  The Backward and Regional Upliftment
+                                  Programme for Youth (BRUPY) is a
                                   government-backed scheme aimed at empowering
                                   youth in underserved and rural areas. It
                                   promotes entrepreneurship by offering
@@ -400,7 +400,7 @@
                                   execution
                                 </p>
                                 <p>
-                                  ✅ Interest Subsidy* – 6% to 9% based on loan
+                                  ✅ Interest Subsidy – 6% to 9% based on loan
                                   amount (up to ₹10 crore)
                                 </p>
                                 <p>
@@ -441,7 +441,7 @@
                                   >
                                 </p>
                                 <p>
-                                  At *360 Subsidy*, we simplify your journey
+                                  At 360 Subsidy, we simplify your journey
                                   with complete professional support throughout
                                   the BRUPY process:
                                 </p>
@@ -629,116 +629,7 @@
                 </div>
               </div>
             </div>
-            <div
-              class="gdlr-core-pbf-wrapper"
-              style="padding: 55px 0px 50px 0px"
-            >
-              <div
-                class="gdlr-core-pbf-background-wrap"
-                style="background-color: #313787"
-              ></div>
-              <div class="gdlr-core-pbf-wrapper-content gdlr-core-js">
-                <div
-                  class="gdlr-core-pbf-wrapper-container clearfix gdlr-core-container"
-                >
-                  <div
-                    class="gdlr-core-pbf-column gdlr-core-column-48 gdlr-core-column-first"
-                  >
-                    <div
-                      class="gdlr-core-pbf-column-content-margin gdlr-core-js"
-                    >
-                      <div
-                        class="gdlr-core-pbf-column-content clearfix gdlr-core-js"
-                      >
-                        <div class="gdlr-core-pbf-element">
-                          <div
-                            class="gdlr-core-title-item gdlr-core-item-pdb clearfix gdlr-core-right-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr"
-                            style="padding-bottom: 10px"
-                          >
-                            <div class="gdlr-core-title-item-title-wrap">
-                              <div
-                                class="gdlr-core-title-item-title gdlr-core-skin-title gdlr-core-title-font"
-                                style="
-                                  font-size: 18px;
-                                  font-weight: 400;
-                                  letter-spacing: 0px;
-                                  text-transform: none;
-                                  color: #ffffff;
-                                "
-                              >
-                                Share This<span
-                                  class="gdlr-core-title-item-title-divider gdlr-core-skin-divider"
-                                ></span>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="gdlr-core-pbf-column gdlr-core-column-12">
-                    <div
-                      class="gdlr-core-pbf-column-content-margin gdlr-core-js"
-                    >
-                      <div
-                        class="gdlr-core-pbf-column-content clearfix gdlr-core-js"
-                      >
-                        <div class="gdlr-core-pbf-element">
-                          <div
-                            class="gdlr-core-social-network-item gdlr-core-item-pdb gdlr-core-left-align gdlr-core-item-pdlr"
-                            style="padding-bottom: 0px"
-                          >
-                            <a
-                              href="#"
-                              target="_blank"
-                              class="gdlr-core-social-network-icon"
-                              title="facebook"
-                              style="font-size: 18px; color: #ffffff"
-                              ><i class="fa fa-facebook"></i></a
-                            ><a
-                              href="#"
-                              target="_blank"
-                              class="gdlr-core-social-network-icon"
-                              title="google-plus"
-                              style="font-size: 18px; color: #ffffff"
-                              ><i class="fa fa-google-plus"></i></a
-                            ><a
-                              href="#"
-                              target="_blank"
-                              class="gdlr-core-social-network-icon"
-                              title="pinterest"
-                              style="font-size: 18px; color: #ffffff"
-                              ><i class="fa fa-pinterest-p"></i></a
-                            ><a
-                              href="#"
-                              target="_blank"
-                              class="gdlr-core-social-network-icon"
-                              title="skype"
-                              style="font-size: 18px; color: #ffffff"
-                              ><i class="fa fa-skype"></i></a
-                            ><a
-                              href="#"
-                              target="_blank"
-                              class="gdlr-core-social-network-icon"
-                              title="twitter"
-                              style="font-size: 18px; color: #ffffff"
-                              ><i class="fa fa-twitter"></i></a
-                            ><a
-                              href="#"
-                              target="_blank"
-                              class="gdlr-core-social-network-icon"
-                              title="instagram"
-                              style="font-size: 18px; color: #ffffff"
-                              ><i class="fa fa-instagram"></i
-                            ></a>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
+        
           </div>
         </div>
 
